[gd_scene load_steps=9 format=3 uid="uid://dhlxe0qj82e8y"]

[ext_resource type="Script" uid="uid://bwtq1pkujrb1d" path="res://addons/_Godot-IDE_/plugins/fancy_filters_script/script_info.gd" id="1_5gq01"]
[ext_resource type="Script" uid="uid://gct2x12uf8jj" path="res://addons/_Godot-IDE_/plugins/fancy_filters_script/button_filter.gd" id="2_djmkv"]
[ext_resource type="Texture2D" uid="uid://dqfn3tghaer0y" path="res://addons/_Godot-IDE_/shared_resources/ScriptExtend.svg" id="3_nynvq"]
[ext_resource type="Texture2D" uid="uid://ouml4wypk5bq" path="res://addons/_Godot-IDE_/shared_resources/MemberConstant.svg" id="4_7xcf1"]
[ext_resource type="Texture2D" uid="uid://bu2y52as0gijo" path="res://addons/_Godot-IDE_/shared_resources/MemberSignal.svg" id="5_2xgjc"]
[ext_resource type="Texture2D" uid="uid://cec6jsyssk4ys" path="res://addons/_Godot-IDE_/shared_resources/MemberProperty.svg" id="5_nynvq"]
[ext_resource type="Texture2D" uid="uid://cgdceyfng83st" path="res://addons/_Godot-IDE_/shared_resources/MemberMethod.svg" id="6_ndpn6"]
[ext_resource type="Texture2D" uid="uid://bjmtfc58y1sbs" path="res://addons/_Godot-IDE_/shared_resources/InterfaceScript.svg" id="8_goajo"]

[node name="Container" type="TabContainer" node_paths=PackedStringArray("button_container", "tree_container")]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
script = ExtResource("1_5gq01")
button_container = NodePath("Script Info/VContainer/SContainer/SHContainer")
tree_container = NodePath("Script Info/SContainer/Tree")

[node name="Script Info" type="VBoxContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="VContainer" type="VBoxContainer" parent="Script Info"]
layout_mode = 2

[node name="SContainer" type="ScrollContainer" parent="Script Info/VContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="SHContainer" type="HBoxContainer" parent="Script Info/VContainer/SContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="show_all" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "All"
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="show_functions" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Show Properties"
toggle_mode = true
button_pressed = true
icon = ExtResource("6_ndpn6")
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="show_properties" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
modulate = Color(1, 0.647059, 0, 1)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Show Properties"
toggle_mode = true
button_pressed = true
icon = ExtResource("5_nynvq")
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="show_signals" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Show Signals"
toggle_mode = true
button_pressed = true
icon = ExtResource("5_2xgjc")
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="show_constants" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
modulate = Color(0, 1, 1, 1)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Show Constants"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_7xcf1")
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="show_parent_class" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
modulate = Color(0.960784, 0.960784, 0.960784, 1)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Show parent classes"
toggle_mode = true
button_pressed = true
icon = ExtResource("3_nynvq")
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="show_native_class" type="Button" parent="Script Info/VContainer/SContainer/SHContainer"]
modulate = Color(0.960784, 0.960784, 0.960784, 1)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Show parent classes"
toggle_mode = true
icon = ExtResource("8_goajo")
icon_alignment = 1
script = ExtResource("2_djmkv")

[node name="SContainer" type="ScrollContainer" parent="Script Info"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="Script Info/SContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
